Fichier-yaml/ingress/ingress-explication.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:                                               #Donner un nom au service.Ex pour grafana: grafana-ingress
  namespace:                                          #Namespace du service voulu: monitoring (par defaut c'est -> default)
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host:                                             #Nom de l'URL. Ex: grafana.local
    http:
      paths:
      - path:                                         #Si l'on veut un accès par le chemin :/xyz ou non : /
        pathType: Prefix
        backend:
          service:
            name:                                     #Nom du service voulu: grafana
            port:
              number:                                 #Numéro du port: 3000
